--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,3 @@
 #wrap{width:320px; height:320px; -moz-border-radius:10px; background:red; position:relative;}
 iframe{width:300px; height:300px; position:absolute; top:10px; left:10px;}
+h2{color:red}
