--- a/static/pagecode/ab_styles.css
+++ b/static/pagecode/ab_styles.css
@@ -34,6 +34,13 @@
       display: block;
     }
 
+legend {
+   font-size: 9px:
+}
+
+h1 {
+   color: black;
+}
     p {
       font-size: 14px;
     }
