--- a/static/pagecode/ab_styles.css
+++ b/static/pagecode/ab_styles.css
@@ -34,13 +34,13 @@
       display: block;
     }
 
-legend {
-   font-size: 7px:
+frameset legend {
+   font-size: 9px:
 }
 
 h1 {
    color: black;
-   font-size: 67px:
+   font-size: 99px:
 }
     p {
       font-size: 14px;
