--- a/static/pagecode/ab_styles.css
+++ b/static/pagecode/ab_styles.css
@@ -37,15 +37,15 @@
 fieldset { border:1px solid blue }
 
 legend {
-  padding: 0.2em 0.5em;
+  padding: 0.8em 0.5em;
   border:0px solid green;
-  color:green;
+  color:blue;
   font-size:60%;
   }
 
 h1 {
    color: black;
-   font-size: 119px:
+   font-size: 66px:
 }
     p {
       font-size: 14px;
